Implement full filesystem tool schema